Removing redundant JS (function fixAZListingScroll) that kept the scrolled to letter from moving behind the fixed nav bar - this is converted by JS in functions.js
Added a “resetFilter” that allows users to easily undo the department
filter

--- a/style.css
+++ b/style.css
@@ -3545,6 +3545,17 @@ body.page-template-landing-page .opening-menu{
 #az-slider .letter-section{
 	margin-bottom:unset;
 }
+#az-slider .filterList{
+	margin-bottom:25px;
+}
+#az-slider .filterList button{
+	padding:2px 2px;
+	margin-left:15px;
+	min-width:unset;
+	font-size:1em;
+	line-height:1em;
+}
+
 /* END styling overrides for the a-z plugin pages (/directory) */
 
 .displayTable{
